--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "card-crammer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://syjhert.github.io/card-crammer/",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
