--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,21 @@
   "homepage": "https://syjhert.github.io/card-crammer/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/vite": "^4.1.5",
+    "@vitejs/plugin-react": "^4.4.1",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "tailwindcss": "^4.1.5",
+    "vite": "^6.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
